Add semicolon to import statement

--- a/src/lib/components/subsession/raceSummary.astro
+++ b/src/lib/components/subsession/raceSummary.astro
@@ -1,5 +1,5 @@
 ---
-import parseLapTime from '$lib/utils/parse-lap-time'
+import parseLapTime from '$lib/utils/parse-lap-time';
 const { subsession } = Astro.props;
 const {
   event_average_lap,
