Use License type from type index

--- a/src/lib/components/subsession/licenseInfo.astro
+++ b/src/lib/components/subsession/licenseInfo.astro
@@ -1,10 +1,6 @@
 ---
+import type License from '$lib/types/index';
 const { licenses, licenseCategory } = Astro.props;
-type License = {
-  min_license_level: number,
-  license_group: number,
-  group_name: string,
-};
 ---
 
 <div class="row-span-1">
