Adjust relative URLs to new path

--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -8,7 +8,7 @@ const seoDescription = description || "An iRacing planner and statistics analyze
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Stat-N-Track/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={seoDescription} />
@@ -22,7 +22,7 @@ const seoDescription = description || "An iRacing planner and statistics analyze
           An iRacing planner and statistics analyzer
         </p>
         <div class="block lg:text-3xl md:text-lg sm:text-md break-words text-center py-2">
-          <a href="/" rel="prefetch">Home</a>
+          <a href="/Stat-N-Track/" rel="prefetch">Home</a>
         </div>
       </div>
       <slot />
