--- a/src/lib/components/subsession/session-results.astro
+++ b/src/lib/components/subsession/session-results.astro
@@ -16,6 +16,7 @@ const {
 } = session || {};
 const handledSessionResults = handleSessionResults({ keysToDisplay: keysToDisplay || new Set([]), results: results || [] });
 const keysArray = Array.from(keysToDisplay);
+const typeNameJoined = simsession_type_name.split(' ').join('');
 ---
 <div class="grid grid-cols-1">
   <table class="text-center col-span-1">
@@ -34,10 +35,10 @@ const keysArray = Array.from(keysToDisplay);
   </table>
 </div>
 <div class="grid grid-cols-1 pt-6">
-  <table x-ref={simsession_type_name} class="text-center col-span-1">
-    <tr x-ref={`${simsession_type_name} Table Headings`}>{keysArray.map((key) => (<th id={`${simsession_type_name} ${key} ${handledSessionResults.length}`} class="border-2" x-on:click="sort">{fieldIdToLabelMap.get(key) || key}</th>))}</tr>
+  <table x-ref={typeNameJoined} class="text-center col-span-1">
+    <tr x-ref={`${typeNameJoined} Table Headings`}>{keysArray.map((key) => (<th id={`${typeNameJoined} ${key} ${handledSessionResults.length}`} class="border-2" x-on:click="sort">{fieldIdToLabelMap.get(key) || key}</th>))}</tr>
     {handledSessionResults.map(
-      (result, rowNumber) => (<tr x-ref={`${simsession_type_name} ${rowNumber}`}>{result.map((value: string|number, index: number) => (<td x-ref={`${simsession_type_name} ${keysArray[index]} ${rowNumber}`} class="border-2">{value}</td>))}</tr>),
+      (result, rowNumber) => (<tr x-ref={`${typeNameJoined} ${rowNumber}`}>{result.map((value: string|number, index: number) => (<td x-ref={`${typeNameJoined} ${keysArray[index]} ${rowNumber}`} class="border-2">{value}</td>))}</tr>),
     )}
   </table>
 </div>
