--- a/src/pages/user/[id]/subsessions.astro
+++ b/src/pages/user/[id]/subsessions.astro
@@ -1,7 +1,7 @@
 ---
 import handleSessionResults from '$lib/utils/handle-session-results';
 import fieldIdToLabelMap from '$lib/utils/field-id-to-label-map';
-import parseLapTime from '$lib/utils/parse-lap-time';
+import { connectToDatabase } from '$lib/mongodb';
 export function getStaticPaths() {
 	return [
 		{ params: { id: 300752 } },
@@ -9,8 +9,10 @@ export function getStaticPaths() {
 	];
 };
 const { id } = Astro.params;
-const response = await fetch(`http://localhost:3000/Stat-N-Track/api/user/subsessions/${id}.json`);
-const subsessions = await response.json();
+const dbConnection = await connectToDatabase();
+const { db } = dbConnection;
+const collection = db.collection('subsessions');
+const subsessions = await collection.find({ 'session_results.2.results': { $elemMatch: { cust_id: Number(id) }}}).sort({_id: -1}).toArray();
 const tableData = subsessions.map((subsession) => {
 	const {
 		subsession_id,
@@ -18,9 +20,6 @@ const tableData = subsessions.map((subsession) => {
 		corners_per_lap,
 		allowed_licenses,
 		license_category,
-		series_logo,
-		season_name,
-		race_week_num,
 	} = subsession;
 	// Current user in Race session;
 	const {
@@ -89,7 +88,7 @@ const keysArray = Array.from(keysToDisplay);
 			<table x-ref="Table" x-data="table" class="text-center col-span-1">
 				<tr x-ref="Headings">{Object.keys(tableData[0]).map((key) => (<th id={`Table ${key} ${tableData.length}`} class="border-2" x-on:click="sort">{fieldIdToLabelMap.get(key) || key}</th>))}</tr>
 				{finalData.map(
-					(result, rowNumber) => (<tr x-ref={`Table ${rowNumber}`}>{Object.keys(result).map((key: string, index: number) => (<td x-ref={`Table ${keysArray[key]} ${rowNumber}`} class="border-2">{key === '0' ? (<a rel="prefetch" href={`/Stat-N-Track/subsession/${result[key]}`}>{result[key]}</a>): result[key]}</td>))}</tr>),
+					(result, rowNumber) => (<tr x-ref={`Table ${rowNumber}`}>{Object.keys(result).map((key: string) => (<td x-ref={`Table ${keysArray[Number(key)]} ${rowNumber}`} class="border-2">{key === '0' ? (<a rel="prefetch" href={`/Stat-N-Track/subsession/${result[key]}`}>{result[key]}</a>): result[key]}</td>))}</tr>),
 				)}
 			</table>
 		</div>
