Correct type import

--- a/src/lib/components/subsession/licenseInfo.astro
+++ b/src/lib/components/subsession/licenseInfo.astro
@@ -1,5 +1,5 @@
 ---
-import type License from '$lib/types/index';
+import type { License } from '$lib/types/index';
 const { licenses, licenseCategory } = Astro.props;
 ---
 
