--- a/src/lib/components/session-results/qualifying.astro
+++ b/src/lib/components/session-results/qualifying.astro
@@ -1,5 +1,9 @@
 ---
 import SessionResults from '$lib/components/subsession/session-results.astro';
+import type { Session } from '$lib/types';
+interface Props {
+  session: Session,
+}
 const { session } = Astro.props;
 const keysToDisplay = new Set([
   'cust_id',
