--- a/src/pages/user/[id]/subsessions.astro
+++ b/src/pages/user/[id]/subsessions.astro
@@ -13,7 +13,7 @@ const dbConnection = await connectToDatabase();
 const { db } = dbConnection;
 const collection = db.collection('subsessions');
 const subsessions = await collection.find({ 'session_results.2.results': { $elemMatch: { cust_id: Number(id) }}}).sort({_id: -1}).toArray();
-const tableData = subsessions.map((subsession: any) => {
+const tableData = subsessions.map((subsession) => {
 	const {
 		subsession_id,
 		track,
