--- a/src/pages/user/[id]/standings.astro
+++ b/src/pages/user/[id]/standings.astro
@@ -12,7 +12,7 @@ const dbConnection = await connectToDatabase();
 const { db } = dbConnection;
 const collection = db.collection('standings');
 const standingsResults = await collection.find({ 'season_driver_data.cust_id': Number(id) }).sort({ season_id: -1}).toArray();
-const finalData: Array<Record<string,any>> = standingsResults.map((result: any) => {
+const finalData: Array<Record<string,any>> = standingsResults.map((result) => {
   const {
     car_class_id,
     division,
