Improve type definitions within components

--- a/src/lib/components/subsession/header.astro
+++ b/src/lib/components/subsession/header.astro
@@ -1,5 +1,9 @@
 ---
 import { Image } from '@astrojs/image/components';
+import type { Subsession } from '$lib/types';
+interface Props {
+  subsession: Subsession
+}
 const { subsession } = Astro.props;
 const {
   series_logo,
