--- a/src/lib/components/subsession/licenseInfo.astro
+++ b/src/lib/components/subsession/licenseInfo.astro
@@ -1,5 +1,9 @@
 ---
-import type { License } from '$lib/types/index';
+import type { License } from '$lib/types';
+interface Props {
+  licenses: Array<License>
+  licenseCategory: string
+}
 const { licenses, licenseCategory } = Astro.props;
 ---
 
