--- a/src/lib/components/subsession/raceSummary.astro
+++ b/src/lib/components/subsession/raceSummary.astro
@@ -1,5 +1,9 @@
 ---
 import parseLapTime from '$lib/utils/parse-lap-time';
+import type { Subsession } from '$lib/types';
+interface Props {
+  subsession: Subsession
+}
 const { subsession } = Astro.props;
 const {
   event_average_lap,
