--- a/src/lib/components/subsession/session-results.astro
+++ b/src/lib/components/subsession/session-results.astro
@@ -1,7 +1,7 @@
 ---
 import handleResults from '$lib/utils/handle-session-results';
 import fieldIdToLabelMap from '$lib/utils/field-id-to-label-map';
-import type { Session } from '$lib/types/index';
+import type { Session } from '$lib/types';
 interface Props {
   session: Session,
   keysToDisplay: Set<string>
